--- a/facade_service/facade_service.yml
+++ b/facade_service/facade_service.yml
@@ -38,6 +38,11 @@ paths:
                       type: string
                     status:
                       type: string
+                  required: 
+                  - traceId
+                  - ts-saga
+                  - package-name
+                  - status
             
   /sagas/info:
     get:
@@ -55,7 +60,31 @@ paths:
               schema: 
                 type: array
                 items: 
-                  type: string
+                  type: object
+                  properties:
+                    traceId:
+                      type: string
+                    ts-saga:
+                       type: string
+                       format: date-time
+                    package-name:
+                      type: string
+                    resource-ids:
+                      type:  array
+                      items:
+                        type: string
+                    status:
+                      type: object
+                    ts-status:
+                      type: string
+                      format: date-time
+                  required: 
+                  - traceId
+                  - ts-saga
+                  - package-name
+                  - resource-ids
+                  - status
+                  - ts-status
   /sagas/stop:
     get:
       tags:
@@ -66,13 +95,7 @@ paths:
         - $ref: '#/components/parameters/traceId'
       responses:
         "200":
-          description: "Response body contains confirmation that the Saga transaction was stopped."
-          content: 
-            application/json:
-              schema: 
-                type: array
-                items: 
-                  type: string
+          $ref: '#/components/responses/genericResponse'
   /sagas/allStopped:
     get:
       tags:
@@ -89,7 +112,26 @@ paths:
               schema: 
                 type: array
                 items: 
-                  type: string
+                  type: object
+                  properties:
+                    traceId:
+                      type: string
+                    ts-saga:
+                       type: string
+                       format: date-time
+                    ts-stop:
+                      type: string
+                      format: date-time
+                    package-name:
+                      type: string
+                    next-op:
+                      type: string
+                  required: 
+                  - traceId
+                  - ts-saga
+                  - ts-stop
+                  - package-name
+                  - next-op
   /sagas/resume:
     get:
       tags:
@@ -101,10 +143,21 @@ paths:
       responses:
         "200":
           $ref: '#/components/responses/genericResponse'
+  /sagas/abort:
+    get:
+      tags:
+      - "tasks"
+      summary: "Abort Saga"
+      description: "Aborts the current Saga."
+      parameters:
+        - $ref: '#/components/parameters/traceId'
+      responses:
+        "200":
+          $ref: '#/components/responses/genericResponse'
 components:
   responses:
     genericResponse:
-      description: Generic response
+      description: Operation acknowledgement
       content:
         application/json:
           schema: 
@@ -122,3 +175,6 @@ components:
       schema:
         type: string
       description: Identifier of the Saga
+ 
+    
+  
